Simplify vercel.json configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
-  "version": 2,
-  "name": "mining-fos-prediction",
   "builds": [
     {
-      "src": "api/*.py",
+      "src": "api/predict.py",
       "use": "@vercel/python"
     }
   ],
@@ -13,15 +11,8 @@
       "dest": "api/predict.py"
     },
     {
-      "src": "/",
-      "dest": "/index.html"
-    },
-    {
       "src": "/(.*)",
       "dest": "/$1"
     }
-  ],
-  "env": {
-    "PYTHON_VERSION": "3.9"
-  }
+  ]
 }
