Add index.py to serve HTML via serverless function

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     {
-      "src": "api/predict.py",
+      "src": "api/*.py",
       "use": "@vercel/python"
     }
   ],
@@ -11,8 +11,12 @@
       "dest": "api/predict.py"
     },
     {
+      "src": "/",
+      "dest": "api/index.py"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "api/index.py"
     }
   ]
 }
