Simplify Vercel config - use rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,12 @@
 {
-  "builds": [
+  "rewrites": [
     {
-      "src": "api/*.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/predict",
-      "dest": "api/predict.py"
+      "source": "/api/predict",
+      "destination": "/api/predict"
     },
     {
-      "src": "/",
-      "dest": "api/index.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "api/index.py"
+      "source": "/(.*)",
+      "destination": "/api/index"
     }
   ]
 }
